[gd_scene load_steps=2 format=3 uid="uid://diqg4gcr1w0pw"]

[ext_resource type="Script" uid="uid://d4dpf5apxewle" path="res://scripts/WarehouseScreen.gd" id="1_qe6l8"]

[node name="WarehouseScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 178.0
offset_bottom = 96.0
script = ExtResource("1_qe6l8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PouchPanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PouchContent" type="VBoxContainer" parent="HBoxContainer/PouchPanel"]
layout_mode = 2

[node name="PouchTitle" type="Label" parent="HBoxContainer/PouchPanel/PouchContent"]
layout_mode = 2
text = "頰囊"
horizontal_alignment = 1

[node name="PouchGrid" type="GridContainer" parent="HBoxContainer/PouchPanel/PouchContent"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="WarehousePanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WarehouseContent" type="VBoxContainer" parent="HBoxContainer/WarehousePanel"]
layout_mode = 2

[node name="WarehouseTitle" type="Label" parent="HBoxContainer/WarehousePanel/WarehouseContent"]
layout_mode = 2
text = "倉庫"
horizontal_alignment = 1

[node name="WarehouseGrid" type="GridContainer" parent="HBoxContainer/WarehousePanel/WarehouseContent"]
layout_mode = 2
columns = 5

[node name="FeedbackLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 46.0
offset_top = -24.0
offset_right = 126.0
offset_bottom = -1.0
horizontal_alignment = 1
